src/App.css
.App {
  text-align: center;
  display: grid;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

h1 {
  font-family: Montserrat;
  font-weight: 500;
  color: #8f8f8f;
  font-size: 26px;
  padding-top: 30px;
  padding-bottom: 70px;
}

h2 {
  font-family: Outfit;
  font-weight: 300;
}

h3 {
  font-family: Outfit;
  font-weight: 400;
}

h4 {
  font-family: Outfit;
  font-weight: 300;
}

h5 {
  font-family: Outfit;
  font-weight: 300;
}

p {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 300;
  white-space: pre;
}

ul {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 300;
  white-space: pre;
}

li {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 300;
  white-space: pre;
}

.navbar {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  font-family: Outfit;
  font-weight: 300;
  font-size: 14px;
  letter-spacing: 0.5px;
  padding: 10px 100px;
  z-index: 99 !important;
}

.nav-item {
  margin: 0 10px;
}

.dropdown-item {
  font-family: Outfit;
  font-size: 15px;
  letter-spacing: normal;
  color: #495057;
}

.homepage {
  display: grid;
}

.popular-pick {
  padding: 80px 100px;
}

.product-item {
  padding-top: 50px;
  padding-left: 0;
  padding-right: 0;
}
.product-image {
  width: 100%;
}

.item-name {
  font: Outfit;
  font-weight: 400;
  margin-top: 10px;
  margin-bottom: 8px;
}

.item-category {
  font: Outfit;
  font-weight: 500;
  color: #8f8f8f;
}

.product-category {
  height: 500px;
  padding: 20px 100px;
  margin-bottom: 30px;

}

.category-image-container {
  padding: 0;
  padding-right: 16px;
}

.category-image {
  width: 100%;
  height: 500px;
  object-fit: cover;
}

.category-info {
  height: 500px;
  background-color: #E3E3E3;
  padding: 130px 160px;
}

.category-info-container {
  padding-right: 0px; 
  padding-left: 16px;
}

.category-description {
  margin-top: 30px;
}

.shop-by-categories-button {
  background-color: #cd973d;
  border: none;
  border-radius: 0;
  font-family: Outfit;
  font-weight: 300;
  letter-spacing: 2px;
  padding: 10px 40px;
  margin-top: 8px;
}

.view-all-product-button {
  background-color: #cd973d;
  border: none;
  border-radius: 0;
  font-family: Outfit;
  font-weight: 300;
  letter-spacing: 2px;
  padding: 10px 120px;
  margin-top: 60px;
}

.footer {
  margin-top: 80px;
}
.footer-info {
  width: 100%;
  height: 300px;
  background-color: #212020;
}

.copyright-container {
  width: 100%;
  height: 60px;
  background-color: #1a1a1a;
}

.copyright {
  color: white;
  padding-top: 19px;
  font-family: Source Sans Pro;
  font-size: 13px;
}


/* --------- Page 3 - All Products ---------- */

.all-products {
  padding: 80px 100px;
}

.signature-collection {
  padding: 80px 100px;
}

.poster-collection {
  padding: 80px 100px;
}


/* --------- Page 4 - Product Details ---------- */

.product-details {
  padding: 80px 160px;
}

.carousel-control-prev-icon {
  background-color: #5d5d5d;
}

.carousel-control-next-icon {
  background-color: #5d5d5d;
}

.product-name {
  font-family: Outfit;
  font-size: 32px;
  font-weight: 400;
  margin-bottom: 10px;
}

.product-collection-artist {
  font-weight: 400;
}

.product-infos {
  text-align: left;
  padding: 0px 50px;
}

.pricing-value {
  font-size: 24px;
  margin: 5px 0 20px;
}

.select-image-size-button {
  width: 100%;
  border-radius: 0;
  border-color: #495057;
  font-family: Outfit;
  margin-bottom: 20px;
}

.size-selection-button {
  font-family: Outfit;
  font-size: 16px;
  color: #282c34;
  border-radius: 0;
  border-color: #5d5d5d;
  background-color: white;
  width: 90px;
  padding: 6px 12px;
  margin-right: 10px;
}

.btn-check:checked+.size-selection-button {
  font-family: Outfit;
  font-size: 16px;
  color: white;
  border-radius: 0;
  border-color: #282c34;
  background-color: #282c34;
  width: 90px;
  padding: 6px 12px;
  margin-right: 10px;
}

.btn-check:checked+.size-selection-button:focus {
  color: white;
  border-color: #495057;
  background-color: #5d5d5d;
}

.size-selection-button:hover {
  color: white;
  border-color: #cd973d;
  background-color: #cd973d;
}

.btn-check:checked+.size-selection-button:active {
  color: white;
  border-color: #495057;
  background-color: #5d5d5d;
}

.btn-check:active {
  color: white;
  border-color: #495057;
  background-color: #5d5d5d;
}

.add-to-cart-button {
  background-color: #cd973d;
  border: none;
  border-radius: 0;
  font-family: Outfit;
  font-weight: 300;
  letter-spacing: 2px;
  padding: 10px 84px;
  margin-bottom: 30px;
}

.product-description {
  padding-top: 0;
}

.add-to-cart-with-quantity {
  display: flex;
}

.quantity-field {
  width: 50px;
  height: 40px;
  font-family: Outfit;
  text-align: center;

}

.quantity-number {
  vertical-align: middle;
}

.icon-shape {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  vertical-align: middle;
}

.icon-sm {
  width: 2rem;
  height: 2rem;
}

.border-product {
  margin: 0 0 25px;
  border-top: 1px solid #efefef;
}

